# OCR_SOGM

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
output/paddle/고급_ISA신탁/: 고급_ISA신탁.json  고급_ISA신탁.md  고급_ISA신탁_0.md  고급_ISA신탁_0_res.json  고급_ISA신탁_1.md  고급_ISA신탁_1_res.json  고급_ISA신탁_2.md  고급_ISA신탁_2_res.json  고급_ISA신탁_3.md  고급_ISA신탁_3_res.json
output/paddle/고급_가계대출/: 고급_가계대출.json  고급_가계대출.md  고급_가계대출_0.md  고급_가계대출_0_res.json  고급_가계대출_1.md  고급_가계대출_10_res.json  고급_가계대출_11.md  고급_가계대출_11_res.json  고급_가계대출_12_res.json  고급_가계대출_13.md  고급_가계대출_13_res.json  고급_가계대출_14.md  고급_가계대출_14_res.json  고급_가계대출_15_res.json  고급_가계대출_16.md  고급_가계대출_16_res.json  고급_가계대출_17_res.json  고급_가계대출_18.md  고급_가계대출_18_res.json  고급_가계대출_19_res.json  고급_가계대출_1_res.json  고급_가계대출_2.md  고급_가계대출_2_res.json  고급_가계대출_3.md  고급_가계대출_3_res.json  고급_가계대출_4.md  고급_가계대출_4_res.json  고급_가계대출_5.md  고급_가계대출_5_res.json  고급_가계대출_6.md  고급_가계대출_6_res.json  고급_가계대출_7.md  고급_가계대출_7_res.json  고급_가계대출_8.md  고급_가계대출_8_res.json  고급_가계대출_9.md  고급_가계대출_9_res.json
output/paddle/고급_세금계산서/: 고급_세금계산서.json  (+17 more)
scripts/: doclayout_yolo_test.py  paddle_ocr_test.py  paddle_ocr_test_single.py  pdf_plumber_test.py
(+120 files in other folders)
