[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu126"

[[tool.uv.index]]
name = "paddle-cu126"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu126/"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "paddlepaddle-gpu==3.2.1",
    "paddleocr[doc-parser]",
    "paddlex[ocr]>=3.3.13",
    "opencv-python",
    "numpy<2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchaudio>=2.6.0",
    "doclayout-yolo>=0.0.4",
    "pdfplumber>=0.11.9",
]
